# api-server-axum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  push-image.sh  run.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 20241001000000_create_users_table.up.sql  20250830172858_alter_created_at_default_stock_buyback_periods.up.sql  20260429200001_create_roles_table.up.sql  20260429200003_create_role_permissions_table.up.sql  20260429200004_add_role_id_to_users.up.sql  20260506234148_add_ws_read_permission.down.sql  20260506234148_add_ws_read_permission.up.sql  20260510000001_create_logs_table.up.sql  20260512000002_add_audit_read_permission.down.sql  20260515163033_drop_stocks_table.down.sql  20260515164000_add_image_permissions.up.sql  20260515165000_add_stock_permissions.down.sql  20260516000001_remove_blog_write_permission.down.sql  20260516000002_remove_image_stock_write_permissions.down.sql  20260516000003_add_user_permissions.up.sql  20260528000001_create_app_settings.up.sql  20260529000001_add_more_settings.down.sql  20260529000002_add_stock_day_all_composite_index.down.sql  20260529000003_add_category_to_app_settings.down.sql  20260529000003_add_category_to_app_settings.up.sql  20260603000002_create_stock_ex_rights_table.down.sql  20260606000001_stock_changes_dates_to_date.down.sql  20260606000001_stock_changes_dates_to_date.up.sql  20260606000002_buyback_periods_unique_stock_no_start_date.up.sql  20260606000003_add_notification_settings.down.sql  20260606000003_add_notification_settings.up.sql  20260608000001_stock_changes_unique_stock_no_start_date.down.sql  20260611000001_add_site_theme_setting.down.sql  20260611000001_add_site_theme_setting.up.sql  20260611000002_add_default_color_mode_setting.down.sql  20260612000001_create_torrents.up.sql  20260612000002_add_torrent_link_ttl_setting.down.sql  20260614000001_add_theme_rotation_setting.down.sql  20260619000001_add_game_read_permission.down.sql  20260619000001_add_game_read_permission.up.sql  20260622000002_add_ledger_invoice_fields.up.sql  20260623000001_invoice_lottery.down.sql  20260624000001_create_lotto.down.sql  20260702000000_baseline.down.sql  20260702000000_baseline.up.sql  (+50 more)
backend/src/: errors.rs  jobs.rs  logging.rs  main.rs  repositories.rs  routes.rs  scheduler.rs  services.rs  state.rs  structs.rs  utils.rs
backend/src/games/: mod.rs  registry.rs
backend/src/games/avalon/: hub.rs  roles.rs  service.rs
backend/src/games/avalon/engine/: tests.rs
backend/src/games/banqi/: engine.rs  game.rs
backend/src/games/banqi/engine/: tests.rs
backend/src/games/chess/: engine.rs  game.rs
backend/src/games/chess/engine/: tests.rs
backend/src/games/common/: mod.rs  room.rs
backend/src/games/farm/: engine.rs  hub.rs  mod.rs  service.rs
backend/src/games/go/: engine.rs  mod.rs
backend/src/games/go/engine/: tests.rs
backend/src/games/gomoku/engine/: tests.rs
backend/src/games/western_chess/: engine.rs  types.rs
backend/src/games/western_chess/engine/: tests.rs
backend/src/jobs/: check_lotto_wins.rs  cleanup_observability.rs  cleanup_unused_images.rs  collect_system_metrics.rs  fetch_gov_tenders.rs  fetch_notes.rs
backend/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/repositories/: audit_logs.rs  blog_comments.rs  blogs.rs  gov_tenders.rs  images.rs  invoices.rs  ledger.rs  logs.rs  messages.rs  passkeys.rs  permissions.rs  portfolio.rs  redis.rs  roles.rs  system_metrics.rs  torrents.rs  users.rs  visitors.rs  vocab.rs
backend/src/repositories/stocks/: buyback.rs  changes.rs  closing_prices.rs  day_all.rs  ex_rights.rs  mod.rs
backend/src/routes/: admin.rs  admin_blog_comments.rs  admin_blogs.rs  admin_gov_tenders.rs  admin_invoice_lottery.rs  admin_messages.rs  admin_stats.rs  admin_vocab.rs  app_settings.rs  audit_logs.rs  auth.rs  blogs.rs  images.rs  invoices.rs  ledger.rs  logs.rs  messages.rs  metrics.rs  notes.rs  permissions.rs  roles.rs  tools.rs  torrents.rs  users.rs  vocab.rs  ws.rs
backend/src/services/: app_settings.rs  audit_logs.rs  auth.rs  blog_comments.rs  blogs.rs  email.rs  gov_tenders.rs  images.rs  invoice_lottery.rs  invoices.rs  ledger.rs  logs.rs  lotto.rs  members.rs  messages.rs  oauth.rs  portfolio.rs  roles.rs  stocks.rs  system_metrics.rs  torrents.rs  twse.rs  users.rs  vocab.rs  vocab_ja.rs  webauthn.rs
backend/src/storage/: local.rs  mod.rs
backend/src/structs/: app_settings.rs  auth.rs  blog_comments.rs  blogs.rs  config.rs  features.rs  gov_tenders.rs  invoices.rs  jobs.rs  ledger.rs  lotto.rs  messages.rs  pagination.rs  portfolio.rs  roles.rs  roster.rs  tools.rs  torrents.rs  users.rs  vocab.rs  webauthn.rs
deploy/: README.md  docker-compose.yml
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts
migrations/: 20250525123826_create_stock_buyback_periods_index.down.sql  20250525123826_create_stock_buyback_periods_index.up.sql  20260405120445_CreateLocalImagesTable.up.sql  20260429160954_add_status_to_images.down.sql  20260429160954_add_status_to_images.up.sql  20260429200002_create_permissions_table.up.sql  20260504000001_create_members_table.up.sql  20260504000002_create_member_oauth_table.down.sql  20260504000002_create_member_oauth_table.up.sql  20260506000001_add_member_read_permission.down.sql  20260506000001_add_member_read_permission.up.sql  20260510000002_add_log_read_permission.down.sql  20260510000002_add_log_read_permission.up.sql  20260512000001_create_admin_audit_logs.up.sql  20260512000002_add_audit_read_permission.up.sql  20260515164000_add_image_permissions.down.sql  20260515164000_add_image_permissions.up.sql  20260515165000_add_stock_permissions.up.sql  20260516000001_remove_blog_write_permission.up.sql  20260516000002_remove_image_stock_write_permissions.up.sql  20260516000003_add_user_permissions.down.sql  20260528000001_create_app_settings.down.sql  20260529000001_add_more_settings.up.sql  20260529000002_add_stock_day_all_composite_index.up.sql  (+20 more)
scripts/: add_vocab_words.py  (+1 more)
(+341 files in other folders)
