[package]
name = "template_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [
    "fs",
    "timeout",
    "trace",
    "cors",
    "limit",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "any",
    "postgres",
    "chrono",
    "uuid",
] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12", features = ["multipart", "json"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
bb8 = "0.8.5"
bb8-redis = "0.17.0"
redis = "0.27.2"
rand = "0.8"
image = "0.25.5"
tokio-cron-scheduler = "*"
async-trait = "0.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1.0"
regex = "1"
