[package]
name = "template_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["tracing", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [
    "fs",
    "timeout",
    "trace",
    "cors",
    "limit",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "any",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12", features = ["multipart", "json"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
bb8 = "0.8.5"
bb8-redis = "0.17.0"
redis = "0.27.2"
rand = "0.8"
tokio-cron-scheduler = "*"
async-trait = "0.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1.0"
regex = "1"
form_urlencoded = "1.2.1"
scraper = "0.23.1"
rust_decimal = { version = "1", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
lettre = "0.11"
