[package]
name = "api-server-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["tracing", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [
    "fs",
    "timeout",
    "trace",
    "cors",
    "limit",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
    "json",
] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
bb8 = "0.8.5"
bb8-redis = "0.17.0"
redis = "0.27.2"
rand = "0.8"
tokio-cron-scheduler = "0.15"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1.0"
regex = "1"
form_urlencoded = "1.2.1"
scraper = "0.23.1"
rust_decimal = { version = "1", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio-util = { version = "0.7.18", features = ["io"] }
zhconv = "0.4.1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
libc = "0.2"
librqbit = { version = "8", default-features = false, features = ["rust-tls"] }
tower = { version = "0.5", features = ["util"] }
wana_kana = "5.0.0"
unicode-normalization = "0.1.25"
# 圖片上傳處理：image 負責 decode 驗證，webp（libwebp/C，靜態連結）負責 lossy 編碼
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
webp = { version = "0.3.1", default-features = false }
# passkey 登入：danger-allow-state-serialisation 讓挑戰狀態可序列化存 Redis（server 端一次性消費，無 client 重放面）；
# conditional-ui 提供 discoverable authentication（登入頁 autofill 免輸帳號）
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
# ResidentKeyRequirement 等 wire 型別不在 webauthn-rs prelude，需直接引 proto crate（版本跟 webauthn-rs 對齊）
webauthn-rs-proto = "0.5"
# webauthn-rs 硬依賴 OpenSSL ≥3.0；vendored = 隨原始碼編譯靜態連結，不吃系統版本
# （本機 WSL 是 1.1.1、distroless 也免帶 runtime libssl；builder 已有 perl/make/gcc）
openssl = { version = "0.10", features = ["vendored"] }
